--- a/smx/m8/index.html
+++ b/smx/m8/index.html
@@ -240,7 +240,7 @@ justify-self
 overflow</pre>
 <p class="image-container"><img style="width: 591.00px" src="img\ff7774686aa91b50.png"></p>
 <p class="image-container"><img style="width: 698.00px" src="img\5442c750bd432e37.gif"></p>
-<pre>&lt;!DOCTYPE html&gt;
+<pre><code>&lt;!DOCTYPE html&gt;
 
 &lt;style&gt;
     html {
@@ -289,7 +289,35 @@ overflow</pre>
     &lt;div class=&#34;section6&#34;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus interdum posuere lorem ipsum dolor.&lt;/div&gt;
     &lt;div class=&#34;section7&#34;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus interdum posuere lorem ipsum dolor.&lt;/div&gt;
     &lt;div class=&#34;section8&#34;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus interdum posuere lorem ipsum dolor.&lt;/div&gt;
-&lt;/div&gt;</pre>
+&lt;/div&gt;</code></pre>
+
+
+      </google-codelab-step>
+    
+      <google-codelab-step label="Item Grid1" duration="0">
+        <p><code>📁 /smx/m8/cssgrid/itemgrid/itemgrid1/index.html</code></p>
+<pre>grid-template-columns: repeat( [ &lt;positive-integer&gt; | auto-fill | auto-fit ] , &lt;track-list&gt; )
+grid-gap</pre>
+<p class="image-container"><img style="width: 698.00px" src="img\a92b51ecffd32367.gif"></p>
+<pre><code>&lt;!DOCTYPE html&gt;
+&lt;style&gt;
+.explorer {
+    list-style-type: none;
+    padding: 0;
+}
+&lt;/style&gt;
+&lt;ul class=&#34;explorer&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;archive.svg&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;audio.svg&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;excel.svg&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;file.svg&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;image.svg&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;pdf.svg&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;powerpoint.svg&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;text.svg&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;video.svg&#34;&gt;
+    &lt;li&gt;&lt;img src=&#34;word.svg&#34;&gt;
+&lt;/ul&gt;</code></pre>
 
 
       </google-codelab-step>
