--- a/xms/index6.html
+++ b/xms/index6.html
@@ -4,14 +4,11 @@
 .explorer {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-
+    grid-gap: 1%;
     list-style-type: none;
     padding: 0;
 }
 
-.explorer li {
-
-}
 </style>
 
 <ul class="explorer">
