--- a/smx/m8/index.html
+++ b/smx/m8/index.html
@@ -296,8 +296,8 @@ overflow</pre>
     
       <google-codelab-step label="Item Grid1" duration="0">
         <p><code>📁 /smx/m8/cssgrid/itemgrid/itemgrid1/index.html</code></p>
-<pre>grid-template-columns: repeat( [ &lt;positive-integer&gt; | auto-fill | auto-fit ] , &lt;track-list&gt; )
-grid-gap</pre>
+<p><a href="https://github.com/gerardfp/gerardfp.github.io/raw/master/smx/m8/file_icons.zip" target="_blank">Descarga los iconos</a> </p>
+<pre>grid-template-columns: repeat( ??? , ??? )</pre>
 <p class="image-container"><img style="width: 698.00px" src="img\a92b51ecffd32367.gif"></p>
 <pre><code>&lt;!DOCTYPE html&gt;
 &lt;style&gt;
