--- a/smx/m8/index.html
+++ b/smx/m8/index.html
@@ -35,8 +35,7 @@ grid-template-rows
 grid-area</pre>
 <p class="image-container"><img style="width: 591.00px" src="img\49a865f4f94327bc.png"></p>
 <p class="image-container"><img style="width: 632.00px" src="img\63fbac97096787aa.gif"></p>
-<pre>&lt;!DOCTYPE html&gt;
-
+<pre><code>&lt;!DOCTYPE html&gt;
 &lt;style&gt;
     html {
         height: 100%;
@@ -68,7 +67,7 @@ grid-area</pre>
     &lt;div class=&#34;section2&#34;&gt;Lorem&lt;br&gt;ipsum&lt;br&gt;dolor&lt;br&gt;sit&lt;br&gt;amet&lt;/div&gt;
     &lt;div class=&#34;section3&#34;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus interdum posuere lorem ipsum dolor. Mauris in aliquam sem fringilla ut morbi. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Vitae sapien pellentesque habitant morbi tristique senectus et. Cursus euismod quis viverra nibh cras pulvinar. Quisque egestas diam in arcu cursus euismod quis. Lectus mauris ultrices eros in. Nulla facilisi morbi tempus iaculis urna. Tincidunt dui ut ornare lectus. Sit amet massa vitae tortor condimentum lacinia. Platea dictumst vestibulum rhoncus est pellentesque. Scelerisque varius morbi enim nunc faucibus a pellentesque sit amet. Quam id leo in vitae turpis massa sed elementum tempus.&lt;/div&gt;
     &lt;div class=&#34;section4&#34;&gt;Lorem ipsum dolor sit amet&lt;/div&gt;
-&lt;/div&gt;</pre>
+&lt;/div&gt;</code></pre>
 
 
       </google-codelab-step>
@@ -81,8 +80,7 @@ grid-column
 grid-row</pre>
 <p class="image-container"><img style="width: 591.00px" src="img\1428fa94c5751eb7.png"></p>
 <p class="image-container"><img style="width: 667.00px" src="img\fbfbd0b31eb68fd4.gif"></p>
-<pre>&lt;!DOCTYPE html&gt;
-
+<pre><code>&lt;!DOCTYPE html&gt;
 &lt;style&gt;
     html {
         height: 100%;
@@ -118,7 +116,7 @@ grid-row</pre>
     &lt;div class=&#34;section3&#34;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus interdum posuere lorem ipsum dolor. Mauris in aliquam sem fringilla ut morbi. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Vitae sapien pellentesque habitant morbi tristique senectus et. Cursus euismod quis viverra nibh cras pulvinar. Quisque egestas diam in arcu cursus euismod quis. Lectus mauris ultrices eros in. Nulla facilisi morbi tempus iaculis urna. Tincidunt dui ut ornare lectus. Sit amet massa vitae tortor condimentum lacinia. Platea dictumst vestibulum rhoncus est pellentesque. Scelerisque varius morbi enim nunc faucibus a pellentesque sit amet. Quam id leo in vitae turpis massa sed elementum tempus.&lt;/div&gt;
     &lt;div class=&#34;section4&#34;&gt;Lorem ipsum dolor sit amet&lt;/div&gt;
     &lt;div class=&#34;section5&#34;&gt;Lorem&lt;br&gt;ipsum&lt;br&gt;dolor&lt;br&gt;sit&lt;br&gt;amet&lt;/div&gt;
-&lt;/div&gt;</pre>
+&lt;/div&gt;</code></pre>
 
 
       </google-codelab-step>
@@ -132,8 +130,7 @@ grid-area
 align-self</pre>
 <p class="image-container"><img style="width: 591.00px" src="img\9a103ff108841dec.png"></p>
 <p class="image-container"><img style="width: 698.00px" src="img\ebd23bd159c9241c.gif"></p>
-<pre>&lt;!DOCTYPE html&gt;
-
+<pre><code>&lt;!DOCTYPE html&gt;
 &lt;style&gt;
     body {
         margin: 0;
@@ -164,7 +161,7 @@ align-self</pre>
     &lt;div class=&#34;section3&#34;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus interdum posuere lorem ipsum dolor. Mauris in aliquam sem fringilla ut morbi. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Vitae sapien pellentesque habitant morbi tristique senectus et. Cursus euismod quis viverra nibh cras pulvinar. Quisque egestas diam in arcu cursus euismod quis. Lectus mauris ultrices eros in. Nulla facilisi morbi tempus iaculis urna. Tincidunt dui ut ornare lectus. Sit amet massa vitae tortor condimentum lacinia. Platea dictumst vestibulum rhoncus est pellentesque. Scelerisque varius morbi enim nunc faucibus a pellentesque sit amet. Quam id leo in vitae turpis massa sed elementum tempus. Id aliquet risus feugiat in ante metus. Tincidunt tortor aliquam nulla facilisi cras fermentum. Diam volutpat commodo sed egestas egestas fringilla phasellus. Bibendum est ultricies integer quis. Fusce ut placerat orci nulla pellentesque dignissim enim. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor magna. Porttitor lacus luctus accumsan tortor posuere ac. Tellus at urna condimentum mattis pellentesque id nibh tortor. Enim facilisis gravida neque convallis a cras semper auctor neque. Eu turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Consectetur adipiscing elit ut aliquam purus sit amet luctus. Vestibulum lectus mauris ultrices eros in cursus turpis massa tincidunt. Quam id leo in vitae turpis massa sed elementum tempus. Morbi tristique senectus et netus et. Iaculis nunc sed augue lacus viverra vitae congue. Suspendisse in est ante in nibh mauris cursus mattis molestie. Velit laoreet id donec ultrices tincidunt arcu non sodales. Quisque egestas diam in arcu cursus. Ornare quam viverra orci sagittis eu volutpat odio. Nunc non blandit massa enim nec dui. Ac odio tempor orci dapibus ultrices. Lacus vel facilisis volutpat est velit egestas dui id. Dictumst quisque sagittis purus sit amet volutpat.&lt;/div&gt;
     &lt;div class=&#34;section4&#34;&gt;Lorem ipsum dolor sit amet&lt;/div&gt;
     &lt;div class=&#34;section5&#34;&gt;Lorem&lt;br&gt;ipsum&lt;br&gt;dolor&lt;br&gt;sit&lt;br&gt;amet&lt;br&gt;consectetur&lt;br&gt;adipiscing&lt;br&gt;elit&lt;/div&gt;
-&lt;/div&gt;</pre>
+&lt;/div&gt;</code></pre>
 
 
       </google-codelab-step>
@@ -179,8 +176,7 @@ justify-self
 align-self</pre>
 <p class="image-container"><img style="width: 591.00px" src="img\24ad18104adbe02a.png"></p>
 <p class="image-container"><img style="width: 698.00px" src="img\ec14fd03d1feec44.gif"></p>
-<pre>&lt;!DOCTYPE html&gt;
-
+<pre><code>&lt;!DOCTYPE html&gt;
 &lt;style&gt;
     body {
         margin: 0;
@@ -223,7 +219,7 @@ align-self</pre>
     &lt;div class=&#34;section6&#34;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus interdum posuere lorem ipsum dolor. Mauris in aliquam sem fringilla ut morbi. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Vitae sapien pellentesque habitant morbi tristique senectus et. Cursus euismod quis viverra nibh cras pulvinar. Quisque egestas diam in arcu cursus euismod quis. Lectus mauris ultrices eros in.&lt;/div&gt;
     &lt;div class=&#34;section7&#34;&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus interdum posuere lorem ipsum dolor. Mauris in aliquam sem fringilla ut morbi. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero nunc. Vitae sapien pellentesque habitant morbi tristique senectus et.&lt;/div&gt;
     &lt;div class=&#34;section8&#34;&gt;Lorem ipsum dolor sit amet&lt;/div&gt;
-&lt;/div&gt;</pre>
+&lt;/div&gt;</code></pre>
 
 
       </google-codelab-step>
@@ -241,7 +237,6 @@ overflow</pre>
 <p class="image-container"><img style="width: 591.00px" src="img\ff7774686aa91b50.png"></p>
 <p class="image-container"><img style="width: 698.00px" src="img\5442c750bd432e37.gif"></p>
 <pre><code>&lt;!DOCTYPE html&gt;
-
 &lt;style&gt;
     html {
         height: 100%;
@@ -296,9 +291,10 @@ overflow</pre>
     
       <google-codelab-step label="Item Grid1" duration="0">
         <p><code>📁 /smx/m8/cssgrid/itemgrid/itemgrid1/index.html</code></p>
-<p><a href="https://github.com/gerardfp/gerardfp.github.io/raw/master/smx/m8/file_icons.zip" target="_blank">Descarga los iconos</a> </p>
-<pre>grid-template-columns: repeat( ??? , ??? )</pre>
-<p class="image-container"><img style="width: 698.00px" src="img\a92b51ecffd32367.gif"></p>
+<p><a href="https://github.com/gerardfp/gerardfp.github.io/raw/master/smx/m8/file_icons.zip" target="_blank"><paper-button class="colored" raised>Descarga los iconos</paper-button></a> </p>
+<pre>grid-template-columns: repeat( ??? , ??? )
+grid-gap</pre>
+<p class="image-container"><img style="width: 698.00px" src="img\ec1a813485e1490b.gif"></p>
 <pre><code>&lt;!DOCTYPE html&gt;
 &lt;style&gt;
 .explorer {
