--- a/smx/m8/index.html
+++ b/smx/m8/index.html
@@ -428,7 +428,7 @@ html, body {
     &lt;div class=&#34;header&#34;&gt;Unreal-Forever&lt;/div&gt;
     &lt;div class=&#34;body&#34;&gt;
         &lt;ul class=&#34;explorer&#34;&gt;
-            &lt;li&gt;&lt;img src=&#34;i1.jpg&#34;&gt;&lt;/li&gt;
+            &lt;li&gt;&lt;img src=&#34;i1.jpg&#34;&gt;
             &lt;li&gt;&lt;img src=&#34;i2.jpg&#34;&gt;
             &lt;li&gt;&lt;img src=&#34;i3.jpg&#34;&gt;
             &lt;li&gt;&lt;img src=&#34;i4.jpg&#34;&gt;
