--- a/xms/index8.html
+++ b/xms/index8.html
@@ -62,14 +62,12 @@ input {
 }
 
 .footer {
+    display: flex;
     background-color: black;
     color: white;
     margin-top: 80px;
     padding: 20px;
-}
-
-.footer {
-    display: flex;
+    flex-wrap: wrap;
 }
 </style>
 
@@ -80,28 +78,19 @@ input {
             <li>PuigHub
             <li>Technologies
             <li>Get Involved
-            <li>Foundation
             <li>About Us
-            <li>Donate
-
             <li><svg class="search-icon" viewBox="0 0 512 512"><path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path></svg>
                 <input placeholder="Buscar">
         </ul>
 </div>
     <div class="body">
         <ul class="explorer">
-            <li><img src="i1.jpg"></li>
+            <li><img src="i1.jpg">
             <li><img src="i2.jpg">
             <li><img src="i3.jpg">
             <li><img src="i4.jpg">
             <li><img src="i5.jpg">
             <li><img src="i6.jpg">
-            <li><img src="i7.jpg">
-            <li><img src="i8.jpg">
-            <li><img src="i9.jpg">
-            <li><img src="i10.jpg">
-            <li><img src="i11.jpg">
-            <li><img src="i12.jpg">
         </ul>
     </div>
     <div class="footer">
