--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
     <main>
       <div id="filters" class="site-width layout horizontal center justified">
+
+<!--
         <div id="sortby">
           <paper-tabs selected="0" noink on-iron-activate="sortBy">
             <paper-tab>A-Z</paper-tab>
@@ -151,7 +153,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           >
           </paper-listbox>
         </paper-dropdown-menu>
-        <paper-dropdown-menu
+        
+--><paper-dropdown-menu
           label="Filter by category"
           class="dropdown-filter"
           no-label-float
