--- a/dam-m8/index.html
+++ b/dam-m8/index.html
@@ -7,7 +7,7 @@
 </style>
 
 <p>Aplicacions mòbils</p>
-<a href="lifecycle">
+<a href="/lifecycle">
         <div class="card">
             <span>Lifecycle callbacks</span>
             <div class="icon android"></div>
