--- a/smx-m8/index.html
+++ b/smx-m8/index.html
@@ -7,7 +7,7 @@
 </style>
 
 <p>SMX-M8-Aplicacions web</p>
-<a href="css-grid">
+<a href="/css-grid">
         <div class="card">
             <span>CSS Grid</span>
             <div class="icon web"></div>
