--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
 <p>{{categoryName}}</p>
 {% for codelab in codelabs -%}
 
-    <a href="{{codelab.url}}">
+    <a href="/{{codelab.url}}">
         <div class="card">
             <span>{{codelab.title}}</span>
             <div class="icon {{codelab.mainTag}}"></div>
