--- a/dam-m3/index.html
+++ b/dam-m3/index.html
@@ -7,7 +7,7 @@
 </style>
 
 <p>DAM-M3-Programació</p>
-<a href="css-grid">
+<a href="/css-grid">
         <div class="card">
             <span>CSS Grid</span>
             <div class="icon web"></div>
