--- a/smx-m8/index.html
+++ b/smx-m8/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
 <style>
 
-.Android {
-    background-image: url();
+body {
+    background-color: #eceff1;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.android .icon {
+    background-image: url('/img/android.svg');
+}
+
+.android {
+    border-color: teal !important;
+}
+
+.icon {
+    background-position: 0 50%;
+    background-repeat: no-repeat;
+    background-size: 32px 32px;
+    height: 42px;
+    width: 42px;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 300px);
+    grid-gap: 1em;
+}
+
+.card {
+    background-color: white;
+    padding: 1em;
+    border-bottom: 5px solid;
 }
 </style>
 
 <p>SMX-M8-Aplicacions web</p>
+<div class="cards">
 <a href="/css-grid">
-        <div class="card">
+        <div class="card web">
             <span>CSS Grid</span>
-            <div class="icon web"></div>
+            <div class="icon"></div>
         </div>
     </a>
+</div>
