--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <style>
 
 :root {
-    --mobils-color: #239023;
+    --mobils-color: #3ddc84;
     --mobils-image: url('/img/mobils.jpg');
-    --web-color: #234093;
+    --web-color: #4285f4;
     --web-image: url('/img/web.jpg');
-    --programacio-color: #934023;
+    --programacio-color: #4a148c;
     --programacio-image: url('/img/programacio.jpg');
 }
 
@@ -35,7 +35,7 @@ a {
 
 .cards {
     display: grid;
-    grid-template-columns: 400px;
+    grid-template-columns: 1fr;
     grid-gap: 1em;
     padding: 3em 1em 1em 1em;
     margin: auto;
