--- a/dam-m8/index.html
+++ b/dam-m8/index.html
@@ -156,7 +156,7 @@ a {
 <a href="/android">
         <div class="card android">
             <div class="card-title">
-                <span>Android Studio</span>
+                <span>Android apps</span>
             </div>
             <div class="card-description">
 
