--- a/android/index.html
+++ b/android/index.html
@@ -32,6 +32,7 @@
 <p>Esta práctica te enseña cómo crear tu primera aplicación para Android. Aprenderás cómo <strong>crear </strong>un proyecto de Android con Android Studio, y <strong>ejecutar </strong>una versión depurable de la aplicación.</p>
 <p>Desarrollaremos una App que consiste en un contador de clics:</p>
 <p class="image-container"><img style="width: 237.00px" src="img/16d3b5773c10a06e.gif"></p>
+<h3 is-upgraded><a href="https://github.com/gerardfp/ContadorDeClics" target="_blank">https://github.com/gerardfp/ContadorDeClics</a></h3>
 
 
       </google-codelab-step>
