--- a/dam-m8/index.html
+++ b/dam-m8/index.html
@@ -145,6 +145,16 @@ a {
 
 .card.android .button{
     background-color: var(--android-color);
+}.card.android{
+    border-color: var(--android-color);
+}
+
+.card.android .icon{
+    background-image: var(--android-icon);
+}
+
+.card.android .button{
+    background-color: var(--android-color);
 }
 </style>
 
@@ -157,6 +167,19 @@ a {
         <div class="card android">
             <div class="card-title">
                 <span>Android apps</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
+    </a><a href="/fragments">
+        <div class="card android">
+            <div class="card-title">
+                <span>Fragments</span>
             </div>
             <div class="card-description">
 
