--- a/_templates/modul.html
+++ b/_templates/modul.html
@@ -5,9 +5,9 @@
 
 :root {
     --android-color: #239023;
-    --android-icon: url('/_images/android.svg');
+    --android-icon: url('/android.svg');
     --java-color: #4a148c;
-    --java-icon: url('/_images/java.svg');
+    --java-icon: url('/java.svg');
 }
 
 body {
