--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
 :root {
     --mobils-color: #3ddc84;
-    --mobils-image: url('/_images/mobils.jpg');
+    --mobils-image: url('/mobils.jpg');
     --web-color: #4285f4;
-    --web-image: url('/_images/web.jpg');
+    --web-image: url('/web.jpg');
     --programacio-color: #4a148c;
-    --programacio-image: url('/_images/programacio.jpg');
+    --programacio-image: url('/programacio.jpg');
 }
 
 body {
